fix social icons on mobile

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -40,5 +40,6 @@
 
   .landing .socialIcons {
     flex-direction: column;
+    left: auto;
   }
 }
